Wrap hero image in a link to special.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 
   <!-- BIG COUPLE IMAGE -->
   <div class="hero-image">
-    <img src="images/hero/love-boy.png" alt="cute couple love">
+    <a href="special.html">
+      <img src="images/hero/love-boy.png" alt="cute couple love">
+    </a>
   </div>
 
 </section>
