Comment out hero image section in index.html

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
   </div>
 
   <!-- BIG COUPLE IMAGE -->
-  <div class="hero-image">
+  <!-- <div class="hero-image">
     <a href="special.html">
       <img src="images/hero/love-boy.png" alt="cute couple love">
     </a>
-  </div>
+  </div> -->
 
 </section>
 
